fixed input box overlapping with search button bug

--- a/frontend/src/app/search-bar/search-bar.component.css
+++ b/frontend/src/app/search-bar/search-bar.component.css
@@ -1,13 +1,12 @@
 /* Search Bar */
-.search-container {
+/* .search-container {
     position: relative;
     width: 100%;
 
-}
-
+} */
+/* 
 .form-input {
     padding-left: 10px;
-    width: 100%;
 
 }
 
@@ -18,22 +17,34 @@
     right: 1px;
     transform: translateY(-50%);
 
-}
+} */
 
 
-.right-pan .btn {
-    border: none;
-    background-color: rgba(172, 251, 145, 0.267);
-    color: #28a745;
+/* Remove the blue outline from the input itself */
+.custom-input:focus {
+    border-color: inherit;
     box-shadow: none;
+
 }
 
-.right-pan .btn:hover {
-    background-color: #28a745;
-    color: white;
 
-    margin: 0;
+
+/* Apply the blue outline to the input group when the input is focused */
+.custom-input-group .custom-input:focus~.input-group-append,
+.custom-input-group .custom-input:focus {
+    border-color: #80bdff;
+    /* Adjust this color if needed */
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
+    /* Adjust these values if needed */
+    border-radius: 5px;
 }
+
+.input-group-append .btn {
+    border-radius: 0 5px 5px 0%;
+}
+
+
+
 
 .list-group-item {
     padding-right: 70px;
@@ -49,6 +60,7 @@
     transform: translateY(-50%);
 }
 
+/* 
 .dropdown-menu.show {
-    width: 100%;
-}
+    
+} */
